--- a/package.json
+++ b/package.json
@@ -5,38 +5,105 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --open --hot --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "build": "webpack --config webpack.prod.js",
+    "test": "jest",
+    "coverage": "npx jest --watchAll=false --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
-    "axios": "^1.4.0",
+    "axios": "^0.27.2",
+    "babel-preset-react-app": "^10.0.1",
     "http-status-codes": "^2.2.0",
-    "react": "^17.0.2",
+    "jest-environment-jsdom": "^29.6.2",
+    "react": "^18.2.0",
     "react-css-modules": "^4.7.11",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-toastify": "^9.1.3",
+    "redux-thunk": "^2.4.2",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
-    "@babel/preset-env": "^7.16.4",
-    "@babel/preset-react": "^7.16.0",
+    "@babel/preset-env": "^7.22.10",
+    "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.18.6",
+    "@jedmao/redux-mock-store": "^3.0.5",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
+    "@types/faker": "^5.5.8",
+    "@types/jest": "^29.5.3",
     "@types/react": "^18.0.21",
     "@types/react-css-modules": "^4.6.4",
     "@types/react-dom": "^18.0.6",
+    "axios-mock-adapter": "^1.21.5",
+    "babel-jest": "^29.6.2",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.8.1",
+    "faker": "^5.5.3",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.6.2",
+    "react-app-polyfill": "^3.0.0",
+    "react-test-renderer": "^18.2.0",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.1",
     "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.6.0",
     "webpack-merge": "^5.8.0"
+  },
+  "jest": {
+    "roots": [
+      "<rootDir>/src"
+    ],
+    "setupFiles": [
+      "react-app-polyfill/jsdom"
+    ],
+    "testMatch": [
+      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
+      "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
+    ],
+    "testEnvironment": "jest-environment-jsdom",
+    "transform": {
+      "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/config/jest/babelTransform.js",
+      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
+      "^(?!.*\\.(js|jsx|mjs|cjs|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+    },
+    "transformIgnorePatterns": [
+      "[/\\\\]node_modules[/\\\\].+\\.*",
+      "^.+\\.module\\.(css|sass|scss)$",
+      "node_modules/(?!axios)"
+    ],
+    "modulePaths": [
+      "/Users/loonymax/space/project/src"
+    ],
+    "moduleNameMapper": {
+      "^react-native$": "react-native-web",
+      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
+    },
+    "moduleFileExtensions": [
+      "web.js",
+      "js",
+      "web.ts",
+      "ts",
+      "web.tsx",
+      "tsx",
+      "json",
+      "web.jsx",
+      "jsx",
+      "node"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setupTests.ts"
+    ],
+    "resetMocks": true
+  },
+  "babel": {
+    "presets": [
+      "react-app"
+    ]
   }
 }
